cabal-version:      3.0
name:               cryptography-blake3
version:            1.0
category:           Cryptography
synopsis:           FFI bindings to BLAKE3
description:
  !TODO! Describe that it embeds the library instead of relying on system libraries

homepage:
  https://github.com/haskell-cryptography/cryptography-blake3#readme

bug-reports:
  https://github.com/haskell-cryptography/cryptography-blake3/issues

author:             Koz Ross
maintainer:         Koz Ross
license:            BSD-3-Clause
build-type:         Simple
tested-with:        GHC ==8.10.7 || ==9.0.1 || ==9.2.1
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/haskell-cryptography/cryptography-blake3

common common
  build-depends:    base >=4.14 && <5
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wmissing-export-lists -fhide-source-paths -Wno-unused-do-bind
    -fwrite-ide-info -hiedir=.hie -haddock

  default-language: Haskell2010

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

library
  import:          common
  include-dirs:    include
  cc-options:      -O3
  c-sources:
    cbits/blake3.c
    cbits/blake3_dispatch.c
    cbits/blake3_portable.c

  if (os(windows) && arch(x86_64))
    c-sources:
      cbits/blake3_avx2_x86-64_windows_gnu.S
      cbits/blake3_avx512_x86-64_windows_gnu.S
      cbits/blake3_sse2_x86-64_windows_gnu.S
      cbits/blake3_sse41_x86-64_windows_gnu.S

  elif (arch(x86_64) || arch(i386))
    c-sources:
      cbits/blake3_avx2_x86-64_unix.S
      cbits/blake3_avx512_x86-64_unix.S
      cbits/blake3_sse2_x86-64_unix.S
      cbits/blake3_sse41_x86-64_unix.S

  elif arch(aarch64)
    c-sources:  cbits/blake3_neon.c
    cc-options: -DBLAKE3_USE_NEON=1

  endif

  exposed-modules: Cryptography.BLAKE3
  hs-source-dirs:  src
